tests/data/invalid/unsupported_format_version.aoncir
[format]
format_version = "0.9.0"
encoding       = "utf-8"

[meta]
name           = "wrong_format_version_should_be_rejected"
version        = "1.0.0"
parameters     = {}
level          = 1
status         = "experimental"

[[ports.inputs]]
name         = "data_input"
semantic_tag = "data_bit"
group        = ""

[[ports.outputs]]
name         = "data_output"
semantic_tag = "data_bit"
group        = ""

[[signals]]
id = "data_output_internal"

[[gates]]
id     = "g_invert"
kind   = "NOT"
inputs = ["data_input"]
output = "data_output_internal"

[[outputs]]
port   = "data_output"
source = "data_output_internal"
